--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,11 @@ footer {
     text-align: center;
     font-size: 15px;
 }
+
+.imagen {
+    width: 100%;
+    height: 300px;
+    justify-content: center;
+    
+
+}
